# noveris-license

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile
backend/api/: pyproject.toml
backend/api/app/: main.py
backend/api/app/core/: audit.py  config.py  errors.py  license_crypto.py  logging.py  pagination.py  session.py
backend/api/app/db/migrations/: env.py
backend/api/app/db/migrations/versions/: 20260423_01_security_offline_audit.py
backend/api/app/modules/issue/: models.py  routes.py  schemas.py  services.py
backend/api/app/modules/verify/: routes.py
backend/api/tests/: conftest.py
backend/api/tests/modules/: test_issue.py  test_verify.py
deploy/helm/naviam-license/: Chart.yaml  values.yaml
deploy/helm/naviam-license/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-web.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/modules/dashboard/components/: DeleteConfirmModal.tsx  LicenseDetailDrawer.tsx  LicenseIssueForm.tsx  LicenseTable.tsx  OfflineActivationModal.tsx  RevokeConfirmModal.tsx
frontend/src/modules/dashboard/types/: license.ts
frontend/src/modules/link/: AppRouter.tsx  AuthGuard.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/i18n/: index.ts
frontend/src/stores/: authStore.ts  langStore.ts  themeStore.ts
i18n/en-US/: common.json
i18n/zh-CN/: common.json
scripts/setup/: generate_rsa_keys.py  init_operator.py
(+6 files in other folders)
